Refactor code smells for phase 2